--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         "php": ">=5.4.0",
         "stripe/stripe-php": "2.*",
         "braintree/braintree_php": "2.40.1",
-        "illuminate/routing": "5.4.*",
-        "illuminate/http": "5.4.*",
-        "illuminate/view": "5.4.*",
+        "illuminate/routing": "5.4.9",
+        "illuminate/http": "5.4.9",
+        "illuminate/view": "5.4.9",
         "firebase/php-jwt": "^5.0",
         "dg/composer-cleaner": "^2.0"
     }
